# ComputersystemerA3

./: CMakeLists.txt  ecg_test.exe.stackdump  makefile  radio_test  simsec_test
src/: ecg.c  ecg_test.c  radio.c  simsec.c
